# Practicle-course-Image-reconstruction-and-visualisation

part1/: .gitlab-ci.yml  CMakeLists.txt  README.md
part1/ass1/: CMakeLists.txt
part1/ass1/ex8/: CMakeLists.txt
part1/ass1/ex8/include/: sign.h
part1/ass1/ex8/src/: CMakeLists.txt  main.cpp  sign.cpp
part1/ass2/: CMakeLists.txt
part1/ass2/ex1/include/: stack.h
part1/ass2/ex1/src/: CMakeLists.txt  main.cpp  stack.cpp  test.cpp
part1/ass2/ex2/include/: NamePairs.h
part1/ass2/ex2/src/: CMakeLists.txt  NamePairs.cpp  main.cpp  test.cpp
part1/ass2/ex3/: answer.txt
part1/ass2/ex3/include/: namePairs.h
part1/ass2/ex3/src/: CMakeLists.txt  main.cpp  namePairs.cpp  test.cpp
part1/ass2/ex4/: CMakeLists.txt  answer.txt
part1/ass2/ex4/include/: Rational.h
part1/ass2/ex4/src/: .namePairs.cpp.swp  CMakeLists.txt  Rational.cpp  main.cpp  test.cpp
part1/ass3/: CMakeLists.txt
part1/ass3/ex1/include/: MemoryOrder.h
part1/ass3/ex1/src/: CMakeLists.txt  MemoryOrder.cpp  main.cpp  test.cpp
part1/ass3/ex2/include/: Iterators.h
part1/ass3/ex2/src/: CMakeLists.txt  ListIterator.cpp  VectorIterator.cpp  main.cpp  test.cpp
part1/ass3/ex3/: answer.txt
part1/ass3/ex3/include/: Tracer.h
part1/ass3/ex3/src/: CMakeLists.txt  Tracer.cpp  main.cpp  test.cpp
part1/ass3/ex4/: CMakeLists.txt  answer.txt
part1/ass3/ex4/include/: FileSystemObject.h
part1/ass3/ex4/src/: CMakeLists.txt  Directory.cpp  File.cpp  main.cpp  test.cpp
part1/ass4/: CMakeLists.txt
part1/ass4/ex1/: CMakeLists.txt
part1/ass4/ex1/src/: CMakeLists.txt  main.cpp  test.cpp
part1/ass4/ex2/: CMakeLists.txt
part1/ass4/ex2/include/: my_find.hpp  my_list.hpp
part1/ass4/ex2/src/: CMakeLists.txt  main.cpp  test.cpp
part1/ass5/: CMakeLists.txt
part1/ass5/ex1/: CMakeLists.txt
part1/ass5/ex1/include/: Tomograph.h
part1/ass5/ex1/src/: CMakeLists.txt  Tomograph.cpp  main.cpp
part1/ass5/ex2/: CMakeCache.txt  CMakeLists.txt  Makefile  ass5_ex2_bin  ass5_ex2_bin_automoc.cpp  ass5_ex2_lib_automoc.cpp  cmake_install.cmake  imageFiles.qrc.depends  qrc_imageFiles.cpp
part1/ass5/ex2/ass5_ex2_bin_automoc.dir/: moc_DrawingWidget_KHHS6XAR5UTIRZ.cpp
part1/ass5/ex2/ass5_ex2_lib_automoc.dir/: moc_MainWindow_LAKZFQZZJ7PKE7.cpp
part1/ass5/ex2/include/: DrawingWidget.h  MainWindow.h
part1/ass5/ex2/src/: DrawingWidget.cpp  MainWindow.cpp  main.cpp
part2-team1/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
part2-team1/include/gui/: AcquisitionWidget.h  MainWindow.h  PoseWidget.h  RealtimePreviewWidget.h  ReconstructionWidget.h  SliceWidget.h  TransferFunctionWidget.h  VisualizationWidget.h  VolumeRendererWidget.h
part2-team1/include/io/: EDFhandler.h  IOutilities.h
part2-team1/include/math/: AcquisitionPose.h  AcquisitionPoses.h  Camera.h  ConjugateGradient.h  Detector.h  IMatrix.h  ITransferFunction.h  Raytracer.h  Reconstruction.h  RegularizedSystemMatrix.h  SliceHelper.h  SystemMatrix.h  Volume.h  VolumeRenderer.h
part2-team1/resources/: box-with-hole.edf  box.edf  lshape.edf
part2-team1/sheets/: math - How do I initialize the t-variables in -A Fast Voxel Traversal Algorithm for Ray Tracing-- - Stack Overflow.url
part2-team1/src/: main.cpp
part2-team1/src/gui/: AcquisitionWidget.cpp  MainWindow.cpp  PoseWidget.cpp  RealtimePreviewWidget.cpp  ReconstructionWidget.cpp  SliceWidget.cpp  TransferFunctionWidget.cpp  VisualizationWidget.cpp  VolumeRendererWidget.cpp
part2-team1/src/io/: EDFhandler.cpp
part2-team1/src/math/: AcquisitionPose.cpp  AcquisitionPoses.cpp  Camera.cpp  ConjugateGradient.cpp  Detector.cpp  Raytracer.cpp  Reconstruction.cpp  RegularizedSystemMatrix.cpp  SliceHelper.cpp  SystemMatrix.cpp  Volume.cpp  VolumeRenderer.cpp
part2-team1/test/: AcRaytracerTests.cpp  AcquisitionTests.cpp  CameraTests.cpp  ConjugateGradientTests.cpp  SystemMatrixTests.cpp  TestMatrix.cpp  TestMatrix.h  TestUtils.h  VolumeRendererTests.cpp
